src/snapshots/git_stager__tests__format_diff_contiguous_additions.snap
---
source: src/lib.rs
expression: formatted
---
flake.nix:
  +39:	
  +40:	    stylix = {
  +41:	      url = "github:nix-community/stylix";
  +42:	      inputs.nixpkgs.follows = "nixpkgs";
  +43:	    };
