src/snapshots/git_stager__tests__format_diff_multiple_files.snap
---
source: src/lib.rs
expression: formatted
---
flake.nix:
  +137:	      debug = true;

zsh.nix:
  -15:	      enableAutosuggestions = true;
