src/snapshots/git_stager__tests__format_diff_non_contiguous_hunks.snap
---
source: src/lib.rs
expression: formatted
---
flake.nix:
  +137:	      debug = true;

  +142:	        ./flake-modules/home-manager.nix
