src/snapshots/git_stager__tests__format_diff_single_deletion.snap
---
source: src/lib.rs
expression: formatted
---
zsh.nix:
  -15:	      enableAutosuggestions = true;
